@@ -52,6 +52,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|response
+operator|.
+name|ResultContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|search
 operator|.
 name|SolrIndexSearcher
@@ -401,6 +415,25 @@ argument_list|(
 name|i
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|o
+operator|instanceof
+name|ResultContext
+condition|)
+block|{
+name|o
+operator|=
+operator|(
+operator|(
+name|ResultContext
+operator|)
+name|o
+operator|)
+operator|.
+name|docs
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|o
